Comitando cadastro de perguntas

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,3 +3,5 @@ UniqueValue={0} ja existe
 
 #IdExists
 IdExists=O valor contido em {0} nao existe
+
+typeMismatch.fotosProdutoRequest.files=O arquivo é requerido
